test/typeCheckTest/pass/test19.ic
class TestReturns {
	void voidMethod () {
		if (true) {
			return;
		}
	}
	
	int intMethod () {
		return 0;
	}
	
	string stringMethod () {
		return "Hello";
	}
	
	boolean boolMethod () {
		return false;
	}
	
	void main (string [] args) {
		voidMethod();
		intMethod();
		stringMethod();
		boolMethod();
	}
}